--- a/pubman_presentation/src/main/resources/OpenAccessMailRIFS.vm
+++ b/pubman_presentation/src/main/resources/OpenAccessMailRIFS.vm
@@ -1,35 +1,33 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
- <head>
-  <title>${subject}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<head>
+    <title>${subject}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 
 <div align="center">${citation}</div>
 
 Dear author,<br/>
-<p>In order to make your publications visible in the sense of Open Access, we will deposit them in our publication database RIFSpublic (<a href="https://rifspublic.gfz-potsdam.de/">https://rifspublic.gfz-potsdam.de</a>). The basis for this is the secondary publication right according to § 38 para. 4 of the German Copyright Law. For this we require the accepted manuscript version (final draft) of your article.</p>
-<p>According to the Helmholtz Association's Open Access Policy (<a href="https://doi.org/10.2312/os.helmholtz.018">https://doi.org/10.2312/os.helmholtz.018</a>), the aim is to achieve a general increase of Open Access publications to 100% by 2025 and to permanently meet this target in subsequent years.</p>
-<p>Please send us your accepted manuscript version to <a href="mailto:openaccess@gfz-potsdam.de">openaccess@gfz-potsdam.de</a></p>
+<p>Would you be interested in a <a href="https://open-access.network/en/information/open-access-primers/green-and-gold#c8383">Green Open Access</a> publication of one of your papers? </p>
+<p>The paper listed above is currently not available for everyone since you must pay to get access to the paper (via subscription = paywall).</p>
 
-<p>If you have any questions, please do not hesitate to contact us.<br/>
-Your library<br/></p>
+<p>There are many reasons for publishing Open Access. Some of them are listed <a href="https://open-access.network/en/information/open-access-primers/arguments-and-reservations">here</a> but the most relevant reasons are the following:<br>
+<ul>
+    <li>You can increase the visibility of your paper which might lead to more citations and more impact. </li>
+    <li>You can help people to get access to your paper, who would otherwise not be able to access that information because they cannot afford the subscription to an expensive journal.</li>
+    <li>Your research and in general new ideas can be spread more rapidly and widely, which in turn triggers new research studies.</li>
+</ul></p>
+<p>Did you know that the Helmholtz Association (and the RIFS as part of the GFZ) strives for a 100% Open Access rate of all publications by 2025 (see <a href="https://os.helmholtz.de/en/open-science-in-helmholtz/open-science-policy/#c111013">here</a>)?<br>
+    (For more information about Open Access see <a href="https://bib.telegrafenberg.de/en/publishing/open-access/oa-help-support">here</a>.)</p>
 
-<p>You can find more information at:<br/>
-<a href="https://bib.telegrafenberg.de/en/publishing/open-access">https://bib.telegrafenberg.de/en/publishing/open-access</a></p>
-<br/><br/>
-
-Liebe*r Autor*in,<br/>
-<p>um Ihre Publikationen im Sinne von Open Access sichtbar zu machen, stellen wir diese als Zweitveröffentlichung über unsere Publikationsdatenbank RIFSpublic (<a href="https://rifspublic.gfz-potsdam.de/">https://gfzpublic.gfz-potsdam.de</a>) zur Verfügung. Grundlage hierfür ist das Zweitveröffentlichungsrecht nach § 38 Abs. 4 UrhG. Dazu benötigen wir die akzeptierte Manuskriptversion (Final Draft) Ihres Artikels.</p>
-<p>Gemäß der Open-Access-Richtlinie der Helmholtz-Gemeinschaft (<a href="https://doi.org/10.2312/os.helmholtz.018">https://doi.org/10.2312/os.helmholtz.018</a>) soll eine generelle Erhöhung des Open-Access-Anteils auf 100% bei Publikationen bis 2025 sowie eine dauerhafte Erfüllung dieser Zielmarke in den Folgejahren erreicht werden.</p>
-<p>Senden Sie uns daher Ihre akzeptierte Manuskriptversion an <a href="mailto:openaccess@gfz-potsdam.de">openaccess@gfz-potsdam.de</a></p>
-
-<p>Für Rückfragen stehen wir natürlich gern zur Verfügung.<br>
-    Ihre Bibliothek<br/></p>
-
-<p>Weitere Informationen finden Sie unter:<br/>
-    <a href="https://bib.telegrafenberg.de/publizieren/open-access">https://bib.telegrafenberg.de/publizieren/open-access</a></p>
+<p>If you are interested in changing the accessibility of your paper, we can upload a post print (or preprint) of your paper (which you can send to <a href="mailto:library@rifs-potsdam.de">library@rifs-potsdam.de</a>) into the <a href="https://publications.rifs-potsdam.de/pubman/faces/HomePage.jsp">RIFS publication database</a> and turn your paper into a Green Open Access publication. (For more information about the differences between post prints and preprints see <a href="https://bib.telegrafenberg.de/en/faq">here</a>.) The right to do that is called the “Secondary Publication Right” and means that authors of scientific contributions have the irrevocable right to make their contributions publicly accessible in a manuscript version twelve months after the initial publication, though only under certain conditions (see <a href="https://www.ub.hu-berlin.de/en/researching-and-publishing/open-access/legal-aspects/secondary-publication-right?set_language=en">here</a>).</p>
+Thank you very much in advance.
+<br>
+Your library
+<br>
+<p>You can find more information at:</br>
+    <a href="https://bib.telegrafenberg.de/en/publishing/open-access">https://bib.telegrafenberg.de/en/publishing/open-access</a></p>
 </body>
 </html>
