--- a/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -381,7 +381,7 @@
 							</h:panelGroup>
 						</h:panelGroup>
 						<!-- input for Identifier -->
-						<h:panelGroup styleClass="free_area0 endline"
+						<h:panelGroup styleClass="free_area0 endline identifierArea"
 							rendered="#{criterion.searchCriterion == 'IDENTIFIER'}">
 							<h:panelGroup styleClass="free_area0 largeFormPush">
 								<h:outputLabel id="lblIdentifierType" styleClass="small_label label_keyword" value=" " />
@@ -396,7 +396,7 @@
 										<f:selectItems value="#{AdvancedSearchBean.identifierTypesListMenu}" />
 									</h:selectOneMenu>
 								</h:panelGroup>
-								<h:inputText id="inpIdentifierValue" styleClass="double_txtInput"
+								<h:inputText id="inpIdentifierValue" styleClass="double_txtInput identifierSuggestQuotes"
 									value="#{criterion.searchString}" />
 							</h:panelGroup>
 						</h:panelGroup>
@@ -427,7 +427,7 @@
 								<f:selectItems value="#{AdvancedSearchBean.reviewMethodListMenu}" />
 							</h:selectOneMenu>
 						</h:panelGroup>
-						
+
 						<!-- input for component content category -->
 						<h:outputLabel id="lblComponentContentCategorySearchTerm" styleClass="small_label label_keyword" value=" "
 							rendered="#{criterion.searchCriterion == 'COMPONENT_CONTENT_CATEGORY_LIST'}" />
@@ -445,7 +445,7 @@
 								</ui:repeat>
 							</span>
 						</h:panelGroup>
-						
+
 						<!-- input for component oa status -->
 						<h:outputLabel id="lblComponentOaStatusSearchTerm" styleClass="small_label label_keyword" value=" "
 							rendered="#{criterion.searchCriterion == 'COMPONENT_OA_STATUS_LIST'}" />
@@ -463,7 +463,7 @@
 								</ui:repeat>
 							</span>
 						</h:panelGroup>
-						
+
 						<!-- input for language-->
 						<h:panelGroup styleClass="free_area1 endline languageArea" rendered="#{criterion.searchCriterion == 'LANG'}">
 							<h:outputLabel id="lblLanguageSuggestMultiple" styleClass="small_label" value=" " />
