--- a/pubman_presentation/src/main/webapp/editItem/DetailGroup.jspf
+++ b/pubman_presentation/src/main/webapp/editItem/DetailGroup.jspf
@@ -244,45 +244,35 @@
 					   varStatus="statusId"
 					   value="#{EditItem.identifierCollection.identifierManager.objectDM}"
 					   rendered="#{!(genre.details_identifiers_display == 'false' and genre.details_identifiers_form_id == 'full-submission' || genre.details_identifiers_display == 'false' and genre.details_identifiers_form_id == 'all')}">
-				<h:panelGroup layout="block"
-							  styleClass="free_area0 endline itemLine noTopBorder">
-					<b class="xLarge_area0_p8 endline labelLine clear"> &#160;<h:outputText
+				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
+					<b class="xLarge_area0_p8 endline labelLine clear"> &#160;
+						<h:outputText
 							styleClass="mandatory" title="#{msg.mandatoryField}" value="*"
 							rendered="#{genre.details_identifiers_optional != 'true' and (genre.details_identifiers_item_identifier_type_optional != 'true' || genre.details_identifiers_item_identifier_value_optional != 'true')}" />
 						<h:outputText value="#{genre.details_identifiers_label}"
 									  rendered="#{EditItem.identifierCollection.identifierManager.objectDM.rowIndex == 0}"
-									  converter="GenreLabelConverter" /><span class="noDisplay">:
-					</span>
+									  converter="GenreLabelConverter" />
+						<span class="noDisplay">:</span>
 					</b>
-					<span class="xHuge_area0 xTiny_marginLExcl endline identifierArea"> <h:panelGroup
+					<span class="xHuge_area0 xTiny_marginLExcl endline identifierArea">
+						<h:panelGroup
 							styleClass="large_area0 largeFormPush"
 							rendered="#{!(genre.details_identifiers_item_identifier_type_display == 'false' and genre.details_identifiers_item_identifier_type_form_id == 'full-submission' || genre.details_identifiers_item_identifier_type_display == 'false' and genre.details_identifiers_item_identifier_type_form_id == 'all')}">
-							<h:outputLabel id="lblSelectIdentifierType"
-										   styleClass="large_label"
-										   value="#{genre.details_identifiers_item_identifier_type_label}"
-										   converter="GenreLabelConverter" />
-							<h:panelGroup layout="block"
-										  styleClass="large_area1 endline selectContainer">
+							<h:outputLabel id="lblSelectIdentifierType" styleClass="large_label" value="#{genre.details_identifiers_item_identifier_type_label}" converter="GenreLabelConverter" />
+							<h:panelGroup layout="block" styleClass="large_area1 endline selectContainer">
 								<h:panelGroup layout="block" styleClass="large_area0">
 									<h:panelGroup styleClass="large_area0 selectionBox">&#160;</h:panelGroup>
-									<h:panelGroup layout="block"
-												  styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+									<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
 								</h:panelGroup>
-								<h:selectOneMenu id="selSelectIdentifierType"
-												 styleClass="endline vocabulary" value="#{identifier.typeString}"
-												 onchange="updateSelectionBox(this);">
-									<f:selectItems
-											value="#{EditItem.identifierCollection.identifierTypes}" />
+								<h:selectOneMenu id="selSelectIdentifierType" styleClass="endline vocabulary" value="#{identifier.typeString}" onchange="updateSelectionBox(this);">
+									<f:selectItems value="#{EditItem.identifierCollection.identifierTypes}" />
 								</h:selectOneMenu>
 							</h:panelGroup>
 						</h:panelGroup>
 						<h:panelGroup
-								rendered="#{!(genre.details_identifiers_item_identifier_value_display == 'false' and genre.details_identifiers_item_identifier_value_form_id == 'full-submission' || genre.details_identifiers_item_identifier_value_display == 'false' and genre.details_identifiers_item_identifier_value_form_id == 'all')}">
-							<h:outputLabel id="lblIdentifierValue" styleClass="xDouble_label"
-										   value="#{genre.details_identifiers_item_identifier_value_label}"
-										   converter="GenreLabelConverter" />
-							<h:inputText id="inpIdentifierValue"
-										 styleClass="xDouble_txtInput identifierSuggest" value="#{identifier.id}" />
+							rendered="#{!(genre.details_identifiers_item_identifier_value_display == 'false' and genre.details_identifiers_item_identifier_value_form_id == 'full-submission' || genre.details_identifiers_item_identifier_value_display == 'false' and genre.details_identifiers_item_identifier_value_form_id == 'all')}">
+							<h:outputLabel id="lblIdentifierValue" styleClass="xDouble_label" value="#{genre.details_identifiers_item_identifier_value_label}" converter="GenreLabelConverter" />
+							<h:inputText id="inpIdentifierValue" styleClass="xDouble_txtInput identifierSuggest" value="#{identifier.id}" />
 						</h:panelGroup>
 					</span>
 					<span class="large_area0_p8 lineToolSection"> <h:commandButton
